# docs/openapi/swagger.yaml
@@ -2786,6 +2786,40 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
 
+  /static-assets/:
+    get:
+      tags: ["other"]
+      summary: "Получить static-assets"
+      security:
+        - bearerAuth: []
+      responses:
+        200:
+          description: OK
+        400:
+          description: Invalid request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        403:
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        422:
+          description: Validation error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        500:
+          description: Internal error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+
   /storage/{key}:
     delete:
       tags: ["projects"]
